--- a/src/main/resources/templates/loginForm.html
+++ b/src/main/resources/templates/loginForm.html
@@ -1,24 +1,8 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
-    <body>
-        <form action="#" th:action="@{/}" th:object="${User}" method="post">
-            <table>
-                <tr>
-                    <td>Name:</td>
-                    <td><input type="text" th:field="*{userName}" /></td>
-                    <td th:if="${#fields.hasErrors('userName')}" th:errors="*{userName}">Name Error</td>
-                </tr>
-                <tr>
-                    <td>Age:</td>
-                    <td><input type="text" th:field="*{password}" /></td>
-                    <td th:if="${#fields.hasErrors('password')}" th:errors="*{password}">Password Error</td>
-                </tr>
-                <tr>
-                    
-                    
-                    <td><button type="submit">Login</button></td>
-                </tr>
-            </table>
-        </form>
+    <body>       
+        <div id="root"></div>
+        <p>check</p>
     </body>
+    
 </html>
