updated react pages

--- a/src/main/resources/templates/loginForm.html
+++ b/src/main/resources/templates/loginForm.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
     <body>   
-        <script src="loginForm.js"></script>    
+        <script src="./loginForm.js"></script>    
         <div id="root"></div>
         
         <p>check</p>
